Fixed small bug with cards not fitting their container

--- a/src/styles/anami-frames.css
+++ b/src/styles/anami-frames.css
@@ -223,8 +223,6 @@
 /*               Card                   */
 /* ------------------------------------ */
 .card {
-  width: 100%;
-  height: 100%;
   padding: min(10px, 2%) min(10px, 5%);
 }
 
